Buzz Audio Library - First shot

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <button id="jumper">Jump !</button>
     </div>
 </div>
+<script src="js/buzz/buzz.js"></script>
 <script src="js/character/visual.js"></script>
 <script type="text/javascript">
     document.getElementById("jumper").onmousedown = function() {
