--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <title>Javascript Character</title>
-    <style>
+    <style type="text/css">
         .centered {
             text-align: center;
         }
@@ -11,7 +12,7 @@
 <body>
 <div>
     <canvas
-            id="canvas"
+            id="game-playground"
             width="490" height="220"></canvas>
     <div class="centered">
         <button id="jumper">Jump !</button>
